# mcs51-examples

./: CMakeLists.txt  LICENSE  README.md
blink/: CMakeLists.txt  blink.c
cmake/: TC-sdcc-msc51.cmake
cmake/Modules/Compiler/: SDCC-8051-ASM.cmake
delay/: CMakeLists.txt  delay.asm  delay.h
include/: lint.h
timer/: CMakeLists.txt  timer.c
